fixing spacing

--- a/src/assets/css/Section_Scroll.css
+++ b/src/assets/css/Section_Scroll.css
@@ -33,7 +33,9 @@
 }
 
 .animation-container h1 {
+  margin-top: 10vh;
   width: 100%;
+  padding: 0 5vw;
   text-align: center;
 }
 
@@ -60,15 +62,15 @@
 /* Positioning for four corners */
 .bottom-left {
   left: 10%;
-  bottom: 15%;
+  bottom: 8%;
 }
 .top-left {
   left: 10%;
-  top: 15%;
+  top: 17%;
 }
 .bottom-right {
   right: 10%;
-  bottom: 15%;
+  bottom: 10%;
 }
 .top-right {
   right: 10%;
